# pypi-package-changelog-generator

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-clawhub.yml
scripts/: build_skill_bundle.py
skills/pypi-package-changelog/: SKILL.md
skills/pypi-package-changelog-generator/: SKILL.md
skills/pypi-package-changelog-generator/references/: openclaw-config.md  output-schema.md
skills/pypi-package-changelog/references/: openclaw-config.md
skills/pypi-package-changelog/scripts/: invoke.py
src/pypi_package_changelog_generator/: archive_diff.py  budget.py  cli.py  pypi_client.py
src/pypi_package_changelog_generator/providers/: github.py
tests/: test_archive_diff.py  test_archive_diff_extra.py  test_budget.py  test_cli.py  test_cli_extra.py  test_diff_text.py  test_github.py  test_github_provider_extra.py  test_http.py  test_invoke.py  test_metadata_analysis.py  test_metadata_helpers.py  test_proxy_support.py  test_pypi_client_extra.py  test_skill_bundle.py  test_versioning.py  test_versioning_extra.py
